# gitlab-search-service

./: Index.hs  Main.hs  gitlab-redirect-service.cabal  gitlab-search-service.cabal  nixos.nix
