name:                gitlab-search-service
version:             0.1.0.0
-- synopsis:
-- description:
license:             BSD3
license-file:        LICENSE
author:              Ben Gamari
maintainer:          ben@smart-cactus.org
copyright:           (c) 2019 Ben Gamari
-- category:
build-type:          Simple
cabal-version:       >=1.10

executable gitlab-search-service
  main-is:             Main.hs
  other-modules:       Index
  build-depends:       base >=4.12 && <4.13,
                       bytestring,
                       megaparsec,
                       servant,
                       servant-server,
                       lucid,
                       servant-lucid,
                       warp
  default-language:    Haskell2010
